--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -659,25 +659,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df_' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[27]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m df_na[\u001b[33m\"\u001b[39m\u001b[33myear_period\u001b[39m\u001b[33m\"\u001b[39m] = df[\u001b[33m\"\u001b[39m\u001b[33myear\u001b[39m\u001b[33m\"\u001b[39m].astype(\u001b[38;5;28mstr\u001b[39m).astype(\u001b[33m\"\u001b[39m\u001b[33mperiod[Y]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mdf_\u001b[49m.dtypes\n",
-      "\u001b[31mNameError\u001b[39m: name 'df_' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "id                    object\n",
+       "year                   int64\n",
+       "month                  int64\n",
+       "element               object\n",
+       "d1                   float64\n",
+       "d2                   float64\n",
+       "d3                   float64\n",
+       "d4                   float64\n",
+       "d5                   float64\n",
+       "d6                   float64\n",
+       "d7                   float64\n",
+       "d8                   float64\n",
+       "d9                   float64\n",
+       "d10                  float64\n",
+       "d11                  float64\n",
+       "d12                  float64\n",
+       "d13                  float64\n",
+       "d14                  float64\n",
+       "d15                  float64\n",
+       "d16                  float64\n",
+       "d17                  float64\n",
+       "d18                  float64\n",
+       "d19                  float64\n",
+       "d20                  float64\n",
+       "d21                  float64\n",
+       "d22                  float64\n",
+       "d23                  float64\n",
+       "d24                  float64\n",
+       "d25                  float64\n",
+       "d26                  float64\n",
+       "d27                  float64\n",
+       "d28                  float64\n",
+       "d29                  float64\n",
+       "d30                  float64\n",
+       "d31                  float64\n",
+       "year_period    period[Y-DEC]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
     "df_na[\"year_period\"] = df[\"year\"].astype(str).astype(\"period[Y]\")\n",
-    "df_.dtypes\n"
+    "df_na.dtypes\n"
    ]
   },
   {
